정적 소스 안 올라가는 문제 해결